# apartment-resident-manager

./: .gitignore  README.md
.claude/: settings.local.json
docs/: 기획서.html
src/AptManager/: 00_cctvutils.h  00_main.cpp  00_mainwindow.cpp  00_mainwindow.h  00_mainwindow.ui  01_car.h  01_residentmanager.cpp  01_residentmanager.h  01_residentpage.cpp  01_residentpage.h  02_alerthistorypage.cpp  02_alerthistorypage.h  02_alertpopup.cpp  02_alertpopup.h  02_securityalert.h  02_securityalertmanager.cpp  02_securityalertmanager.h  03_notice.h  03_noticedialog.cpp  03_noticedialog.h  03_noticemanager.cpp  03_noticemanager.h  03_noticepage.cpp  03_noticepage.h  CMakeLists.txt  car.h  dashboardpage.cpp  dashboardpage.h  dummy_data.sql  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parkingdialog.cpp  parkingdialog.h  parkingpage.cpp  parkingpage.h  resident.h  residentmanager.cpp  residentmanager.h  (+2 more)
src/AptManager/.claude/: settings.local.json
